# leetcode

./: pyproject.toml
src/easy/: two sum
src/easy/palindrom_number/: palindrome_number  palindrome_number.py
src/easy/two_sum/: two_sum.py
test/easy/: test_two_sum.py
test/easy/palindrom_number/: test_palindrome_number.py
test/easy/test_two_sum/: test_two_sum.py
