[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Solution of leetcode problems by me"
authors = ["Prabhat-Thapa45 <akoup66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"
CacheControl = "^0.12.11"
cachy = "^0.3.0"
certifi = "^2022.12.7"
cffi = "^1.15.1"
charset-normalizer = "^3.0.1"
cleo = "^2.0.1"
crashtest = "^0.4.1"
distlib = "^0.3.6"
dulwich = "^0.20.50"
exceptiongroup = "^1.0.4"
filelock = "^3.8.2"
html5lib = "^1.1"
idna = "^3.4"
importlib-metadata = "^5.1.0"
iniconfig = "^1.1.1"
"jaraco.classes" = "^3.2.3"
jsonschema = "^4.17.3"
keyring = "^23.11.0"
lockfile = "^0.12.2"
more-itertools = "^9.0.0"
msgpack = "^1.0.4"
packaging = "^22.0"
pexpect = "^4.8.0"
pip = "^22.3.1"
pkginfo = "^1.9.2"
platformdirs = "^2.6.0"
pluggy = "^1.0.0"
poetry-core = "^1.4.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pylev = "^1.4.0"
pyrsistent = "^0.19.2"
pytest = "^7.2.0"
requests-toolbelt = "^0.10.1"
setuptools = "^65.6.3"
shellingham = "^1.5.0"
six = "^1.16.0"
tomli = "^2.0.1"
tomlkit = "^0.11.6"
urllib3 = "^1.26.13"
virtualenv = "^20.17.1"
webencodings = "^0.5.1"
wheel = "^0.38.4"
xattr = "^0.10.1"
zipp = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]